<resources
        xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">9 Cards</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="moveTo">Move to</string>
    <string name="appInfo">App Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="make_public">Make Public</string>
    <string name="share">Share</string>
    <string name="filter">Filter</string>
    <string name="loading">Loading</string>
    <string name="next">Next</string>
    <string name="contactUsError">Oops! Please contact us if this problem persists.</string>
    <string name="formFieldError">Is it possible you missed filling in a section of the form?</string>
    <string name="sendTo">Send to</string>
    <string name="buttonErrorReload">Reload</string>
    <string name="resize">Resize</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="itemAddedToCollectionSuccessful">Item added to <xliff:g id="collection" example="Social">%1$s</xliff:g></string>
    <string name="collectionsTitle">Collections</string>
    <string name="momentsTitle">Moments</string>
    <string name="profileTitle">Profile</string>
    <string name="wallpaperTitle">Wallpaper</string>
    <string name="nineCardsSettingsTitle">Settings</string>
    <string name="widgetsTitle">Widgets</string>
    <string name="buttonContinue">Continue</string>
    <string name="buttonLetStart">Let\'s start</string>
    <string name="buttonTryAgain">Try again</string>
    <string name="welcome">
        <![CDATA[
            A launcher crafted for and by<br/><b>Android Power Users</b>
        ]]>
    </string>
    <string name="termsAndConditions">
        <![CDATA[
            by continuing, you accept the<br/><u>Terms of Use</u> and <u>Privacy Policy</u>.
        ]]>
    </string>
    <string name="addDeviceTitle">Hi, <xliff:g id="username" example="Michael Reagan">%1$s</xliff:g>!</string>
    <string name="addDeviceMessage">We have detected other devices in your user configuration. Do you want to load your existing Collections and themes from one of these devices?</string>
    <string name="errorAccountsMessage">You need a Google account to use 9Cards. Don\'t worry; we only have access to your account name and any other permissions will be prompted.</string>
    <string name="errorFineLocationMessage">We\'ll use your location to highlight the weather in the Moments screen.</string>
    <string name="canceledGooglePermission">The Android Market permission is required to enjoy <xliff:g id="app_name">9Cards</xliff:g></string>
    <string name="errorLoginUser">Error accessing server. Please try again.</string>
    <string name="errorConnectingGoogle">Error connecting with Google. Please try again.</string>
    <string name="goTo9Cards">Welcome to 9Cards!</string>
    <string name="downloadingYourSetup">Just a second, we are downloading your setup.</string>
    <string name="downloadingBitmapsMessage">Downloading images for apps</string>
    <string name="savingConfigurationMessage">Saving configuration to our servers</string>
    <string name="wizard_loading_connecting_with_google">Connecting with Google</string>
    <string name="wizard_loading_request_google_permission">Request Google permission</string>
    <string name="wizard_loading_connecting_with_plus">Connecting with Google Plus</string>
    <string name="wizard_loading_devices">Loading devices</string>
    <string name="wizard_loading_looking_for_better_collection">Creating better Collections with your apps</string>
    <string name="wizard_loading_saving_collections">Saving collections</string>
    <string name="wizard_loading_saving_moments">Saving Moments</string>
    <string name="creatingCollectionError">We cannot create your Collections at this time. Please try again later.</string>
    <string name="loadUserConfigDeviceReplace">Replace <xliff:g id="phone" example="Nexus 5">%1$s</xliff:g> with a new configuration.</string>
    <string name="deviceNotFoundMessage">This device is not linked to your account. Please log in to continue.</string>
    <string name="wizard_step_title_1">Welcome back power user!</string>
    <string name="wizard_step_1">9Cards helps you to be more productive in your day-to-day life.</string>
    <string name="wizard_step_title_2">Remember, 9Cards is social!</string>
    <string name="wizard_step_2">Share your collections with your friends in the 9 Cards community.</string>
    <string name="wizard_step_title_3">Use Moments to adapt 9Cards to your life.</string>
    <string name="wizard_step_3">We designed Moments to adapt your phone to your lifestyle. Setup your moments with the widgets that you love.</string>
    <string name="wizard_step_title_4">Convert your smartphone into a really smart phone.</string>
    <string name="wizard_step_4">Dig into your Moments settings to configure WiFi and set hours so your phone will automatically switch Moments based on the timeline of your day.</string>
    <string name="wizard_step_title_5">Thanks for using 9Cards</string>
    <string name="wizard_step_5">Thanks for using 9Cards, power users! Remember that this is a free and Open Source project crafted by, and for the community. </string>
    <string name="errorAndroidMarketPermissionNotAccepted">You need to accept the Android Market permissions in order to use 9Cards.</string>
    <string name="errorGooglePermissionNotAccepted">You need to accept the Google permissions in order to use 9Cards.</string>
    <string name="errorNoCollectionsSelected">Please select the collections that you want to use.</string>
    <string name="currentDeviceTitle">%s (current device)</string>
    <string name="newConfigurationSubtitle">We\'ll create a new configuration based on your apps</string>
    <string name="deviceMigratedFromV1">Migrated from the previous version</string>
    <string name="otherDevicesLink">Other devices configurations</string>
    <string name="wizard_new_conf_steps_counter">%1$s of 6</string>
    <string name="wizard_new_conf_title_step_0">Welcome to 9Cards</string>
    <string name="wizard_new_conf_desc_step_0">We\'re looking to create the best user experience for you with this launcher and would like to know the things you\'re interested in seeing.</string>
    <string name="wizard_new_conf_title_step_1">Apps grouped by categories</string>
    <string name="wizard_new_conf_desc_step_1">
        <![CDATA[
            We are categorizing your <b>%1$s apps</b> in <b>%2$s categories</b> that we call <b>Collections</b>. What categories would you like to use?
        ]]>
    </string>
    <string name="wizard_new_conf_collection_counter_step_1">%1$s of %2$s Collections</string>
    <string name="wizard_new_conf_collection_name_step_1">%1$s (%2$s apps)</string>
    <string name="wizard_new_conf_collection_all_collections">All Collections</string>
    <string name="addApps">Add Apps</string>
    <string name="addRecommendations">Add Recommendation</string>
    <string name="addContact">Add Contact</string>
    <string name="addShortcut">Add Shortcut</string>
    <string name="personalizationPreferences">Personalization</string>
    <string name="lookFeelPrefTitle">Look &amp; feel</string>
    <string name="lookFeelPrefSummary">Change the theme and other graphic styles</string>
    <string name="selectThemeTitle">Select Theme</string>
    <string name="selectThemeSummary">Select Theme Summary</string>
    <string name="googleLogoTitle">Google Logo</string>
    <string name="googleLogoSummary">Type of Google Logo on the Search Bar</string>
    <string name="fontsTitle">Fonts Size</string>
    <string name="fontsSummary">General Fonts Size</string>
    <string name="iconsTitle">Icons Size</string>
    <string name="iconsSummary">General Icons Size</string>
    <string name="cardPaddingTitle">Card Padding</string>
    <string name="cardPaddingSummary">Padding between cards on Collections</string>
    <string name="momentsPrefTitle">Moments</string>
    <string name="momentsPrefSummary">Configure options for your Moments</string>
    <string name="appDrawerPrefTitle">App Drawer</string>
    <string name="appDrawerPrefSummary">Configure the Apps and Contacts Screen in your App Drawer</string>
    <string name="appDrawerLongPressTitle">Long Press Action</string>
    <string name="appDrawerOpenAnimationTitle">Open Animation</string>
    <string name="appDrawerFistTabContactTitle">Favorite Contacts First Tab</string>
    <string name="appDrawerFistTabContactSummary">Favorite Contacts will appear in the first position</string>
    <string name="animationsPrefTitle">Animations</string>
    <string name="animationsPrefSummary">Select animations in 9Cards</string>
    <string name="analyticsPrefTitle">Analytics</string>
    <string name="analyticsPrefSummary">Learn more about our analytics</string>
    <string name="developerPrefTitle">Developer Options</string>
    <string name="developerPrefSummary">Only use this if you are an Android/Scala Dev :-)</string>
    <string name="devAwarenessAPICategory">Awareness API</string>
    <string name="devProbablyActivityTitle">Probable Activity</string>
    <string name="devHeadphonesTitle">Headphones</string>
    <string name="devLocationTitle">Location</string>
    <string name="devWeatherTitle">Weather</string>
    <string name="devAppsCategorizedTitle">Apps Categorized</string>
    <string name="devAndroidTokenTitle">Android Token</string>
    <string name="devDeviceCloudIdTitle">Device Cloud Id</string>
    <string name="devDimensionsTitle">Dimension</string>
    <string name="devCurrentDimenTitle">Current Dimension</string>
    <string name="devCurrentDensityTitle">Current Density</string>
    <string name="devClickClipboard">Click to copy to the clipboard</string>
    <string name="devWizardTitle">Wizard</string>
    <string name="devEmptyDevicesV1WizardTitle">V1 Api sent a empty devices</string>
    <string name="devEmptyGoogleDriveDevicesWizardTitle">Google Drive sent a empty devices</string>
    <string name="devOthersTitle">Others</string>
    <string name="devClearCacheImagesTitle">Clear cache images</string>
    <string name="devShowPositionInCardsTitle">Show positions in cards</string>
    <string name="devShowPrintInfoOptionInAccounts">Print Drive information</string>
    <string name="devIsStethoActiveFalse">Enable Stetho</string>
    <string name="devIsStethoActiveSummary">Requires restarting the application</string>
    <string name="devRestartApplication">Restart the application</string>
    <string name="devBackendCategory">Backend</string>
    <string name="devOverrideBackendV2Url">Override backend URL</string>
    <string name="devOverrideBackendV2UrlSummary">Requires restarting the application</string>
    <string name="devBackendV2Url">Backend URL</string>
    <string name="others">Others</string>
    <string name="wizardInlineTitle">Show Wizard Inline</string>
    <string name="wizardInlineSummary">We\'ll share our personal tips again next time</string>
    <string name="aboutTitle">About 9Cards</string>
    <string name="aboutSummary">Want to know more about this Open Source project?</string>
    <string name="sendFeedbackTitle">Send Feedback</string>
    <string name="sendFeedbackSummary">We\'d love to get your feedback on our app</string>
    <string name="rateGooglePlay">Please rate us in Google Play.</string>
    <string name="knowTeam">Meet our team</string>
    <string name="followTwitter">Follow us on Twitter</string>
    <string name="followFacebook">Follow us on Facebook</string>
    <string name="followGooglePlus">Follow us on Google Plus</string>
    <string name="openSource">We are Open Source!</string>
    <string name="openSourceSummary">Learn why this project is Open Source</string>
    <string name="helpTitle">Help</string>
    <string name="helpSummary">Can we help you with something?</string>
</resources>