<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 47 Degrees, LLC. <http://www.47deg.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/devAppsCategorizedTitle">

        <Preference
            android:key="appsCategorized"
            android:title="@string/devAppsCategorizedTitle"/>

        <Preference
            android:key="androidToken"
            android:title="@string/devAndroidTokenTitle"
            android:summary="@string/devClickClipboard"/>

        <Preference
            android:key="deviceCloudId"
            android:title="@string/devDeviceCloudIdTitle"
            android:summary="@string/devClickClipboard"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/devDimensionsTitle">

        <Preference
            android:title="@string/devCurrentDimenTitle"
            android:summary="@string/dimen_name"/>

        <Preference
            android:key="currentDensity"
            android:title="@string/devCurrentDensityTitle"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/devAwarenessAPICategory">

        <Preference
            android:key="probablyActivity"
            android:title="@string/devProbablyActivityTitle"/>

        <Preference
            android:key="headphones"
            android:title="@string/devHeadphonesTitle"/>

        <Preference
            android:key="location"
            android:title="@string/devLocationTitle"/>

        <Preference
            android:key="weather"
            android:title="@string/devWeatherTitle"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/devBackendCategory">

        <CheckBoxPreference
            android:key="overrideBackendV2Url"
            android:title="@string/devOverrideBackendV2Url"
            android:summary="@string/devOverrideBackendV2UrlSummary"/>

        <EditTextPreference
            android:key="backendV2Url"
            android:title="@string/devBackendV2Url"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/devWizardTitle">

        <CheckBoxPreference
            android:key="v1EmptyDeviceWizard"
            android:defaultValue="false"
            android:title="@string/devEmptyDevicesV1WizardTitle"/>

        <CheckBoxPreference
            android:key="googleDriveEmptyDeviceWizard"
            android:defaultValue="false"
            android:title="@string/devEmptyGoogleDriveDevicesWizardTitle"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/devOthersTitle">

        <Preference
            android:key="restartApplication"
            android:title="@string/devRestartApplication"/>

        <Preference
            android:key="clearCacheImages"
            android:title="@string/devClearCacheImagesTitle"/>

        <CheckBoxPreference
            android:key="showPositionInCards"
            android:title="@string/devShowPositionInCardsTitle"/>

        <CheckBoxPreference
            android:key="showPrintInfoOptionInAccounts"
            android:title="@string/devShowPrintInfoOptionInAccounts"/>

        <CheckBoxPreference
            android:key="isStethoActive"
            android:title="@string/devIsStethoActiveFalse"
            android:summary="@string/devIsStethoActiveSummary"/>

    </PreferenceCategory>

</PreferenceScreen>