<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 47 Degrees, LLC. <http://www.47deg.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/personalizationPreferences">

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_lookfeel"
            android:title="@string/lookFeelPrefTitle"
            android:key="lookFeelKey"
            android:summary="@string/lookFeelPrefSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_moments"
            android:title="@string/momentsPrefTitle"
            android:key="momentKey"
            android:summary="@string/momentsPrefSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_appdrawer"
            android:title="@string/appDrawerPrefTitle"
            android:key="appDrawerKey"
            android:summary="@string/appDrawerPrefSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_animations"
            android:title="@string/animationsPrefTitle"
            android:key="animationsKey"
            android:summary="@string/animationsPrefSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_analytics"
            android:title="@string/analyticsPrefTitle"
            android:key="analyticsKey"
            android:summary="@string/analyticsPrefSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_developers"
            android:title="@string/developerPrefTitle"
            android:key="developerKey"
            android:summary="@string/developerPrefSummary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/others">

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_9cards"
            android:title="@string/wizardInlineTitle"
            android:key="wizardInlineKey"
            android:summary="@string/wizardInlineSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_about"
            android:title="@string/aboutTitle"
            android:key="aboutKey"
            android:summary="@string/aboutSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_feedback"
            android:title="@string/sendFeedbackTitle"
            android:key="feedbackKey"
            android:summary="@string/sendFeedbackSummary"/>

        <PreferenceScreen
            android:icon="@drawable/icon_preferences_help"
            android:title="@string/helpTitle"
            android:key="helpKey"
            android:summary="@string/helpSummary"/>

    </PreferenceCategory>

</PreferenceScreen>