<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 47 Degrees, LLC. <http://www.47deg.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/lookFeelPrefTitle">

        <ListPreference
            android:key="theme"
            android:defaultValue="1"
            android:entries="@array/themes"
            android:entryValues="@array/themesValues"
            android:title="@string/selectThemeTitle"
            android:summary="@string/selectThemeSummary"/>

        <ListPreference
            android:key="googleLogo"
            android:defaultValue="0"
            android:entries="@array/googleLogos"
            android:entryValues="@array/googleLogosValues"
            android:title="@string/googleLogoTitle"
            android:summary="@string/googleLogoSummary"/>

        <ListPreference
            android:key="fontsSize"
            android:defaultValue="1"
            android:entries="@array/fonts"
            android:entryValues="@array/fontsValues"
            android:title="@string/fontsTitle"
            android:summary="@string/fontsSummary"/>

        <ListPreference
            android:key="iconsSize"
            android:defaultValue="1"
            android:entries="@array/icons"
            android:entryValues="@array/iconsValues"
            android:title="@string/iconsTitle"
            android:summary="@string/iconsSummary"/>

        <ListPreference
            android:key="cardPadding"
            android:defaultValue="1"
            android:entries="@array/cardPadding"
            android:entryValues="@array/cardPaddingValues"
            android:title="@string/cardPaddingTitle"
            android:summary="@string/cardPaddingSummary"/>

    </PreferenceCategory>

</PreferenceScreen>