<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_collections"
        android:icon="@drawable/menu_icon_collections"
        android:title="@string/collectionsTitle"/>

    <item
        android:id="@+id/menu_moments"
        android:icon="@drawable/menu_icon_moments"
        android:title="@string/momentsTitle"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/menu_icon_profile"
        android:title="@string/profileTitle"/>

    <item
            android:id="@+id/menu_change_moment"
            android:icon="@drawable/menu_icon_profile"
            android:title="Change Moment"/> <!-- Remove this option when the new menu is created-->

    <item
        android:title="@string/configurationTitle"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_send_feedback"
                android:title="@string/sendFeedbackTitle"/>

            <item
                android:id="@+id/menu_help"
                android:title="@string/helpTitle"/>

        </menu>
    </item>

</menu>