<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
            android:key="appDrawerLongPressAction"
            android:defaultValue="0"
            android:entries="@array/drawerActions"
            android:entryValues="@array/drawerActionsValues"
            android:title="@string/appDrawerLongPressTitle"/>

    <ListPreference
            android:key="appDrawerAnimation"
            android:defaultValue="0"
            android:entries="@array/appDrawerOpenAnimations"
            android:entryValues="@array/appDrawerOpenAnimationsValues"
            android:title="@string/appDrawerOpenAnimationTitle"/>

    <CheckBoxPreference
            android:key="appDrawerFavoriteContacts"
            android:defaultValue="false"
            android:title="@string/appDrawerFistTabContactTitle"
            android:summary="@string/appDrawerFistTabContactSummary"/>

</PreferenceScreen>